Compiler/tests/typing/bad/testfile-field-4.rs

fn foo() {}
struct S { a: i32 }
fn main() { let x = 42; (foo()).a; }
